tests/NormalTests/paczka1/fuzzy1/90139101.err
Error in line 6: y8C59EO5 A739 82,3
Error in line 12: y8C59EO5 S251 21,6
Error in line 14: MHio A739 42,2
Error in line 21: y8C59EO5 A620 24,4
Error in line 25: y8C59EO5 A637 -2,4
Error in line 22: LLyEq A739 50,4
Error in line 30: MHio A637 66,9
Error in line 27: A739 A739 62,7
Error in line 26: LLyEq A620 22,9
